--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,5 +7,7 @@
 @import './variables/extend';
 @import './variables/mixing';
 //import de la carpeta secciones:
+@import './secciones/body';
 @import './secciones/header';
+@import './secciones/main';
 @import './secciones/footer';
