--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -1,15 +1,11 @@
-#footerIndex{
+footer{
     background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
-    position: fixed;
-    bottom: 0;
 }
 @media(min-width: 320px){
-    #footerIndex{
+    footer{
         .grilla{
-            height: 10vh;
-            width: 100vw;
             .dos{
-                height: 100vh;
+                height: 10vh;
                 color: white;
                 display: flex !important;
                 justify-content: space-around;
