contacto.html creado y se agregó SEO al sitio

--- a/scss/secciones/_body.scss
+++ b/scss/secciones/_body.scss
@@ -3,3 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.bodycontacto{
+    background-image: url('https://preview.redd.it/4ixw21xcxvb51.png?auto=webp&s=1a7ca0c75143639c5ef8d694c3f84eb17cf49c83'); 
+    background-repeat: no-repeat;
+}
