--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
   background-repeat: no-repeat;
   background-size: cover; }
 
+.bodycontacto {
+  background-image: url("https://preview.redd.it/4ixw21xcxvb51.png?auto=webp&s=1a7ca0c75143639c5ef8d694c3f84eb17cf49c83");
+  background-repeat: no-repeat; }
+
 header .logotipo {
   zoom: 8%;
   opacity: 90%; }
