--- a/scss/secciones/_main.scss
+++ b/scss/secciones/_main.scss
@@ -45,3 +45,12 @@
         margin: 40px;
     }
 }
+.maincontacto{
+    h1{
+        font-family: 'Bebas Neue';
+        margin: 5rem;
+        color: white;
+    }
+    height: 90vh;
+    text-align: center;
+}
