--- a/scss/secciones/_body.scss
+++ b/scss/secciones/_body.scss
@@ -4,6 +4,9 @@
     background-size: cover;
 }
 .bodycontacto{
+    background-color: black;
     background-image: url('https://preview.redd.it/4ixw21xcxvb51.png?auto=webp&s=1a7ca0c75143639c5ef8d694c3f84eb17cf49c83'); 
     background-repeat: no-repeat;
+    background-position: center;
+    background-position-y: top;
 }
