seccion "acerca de" finalizada

--- a/scss/secciones/_body.scss
+++ b/scss/secciones/_body.scss
@@ -10,3 +10,9 @@
     background-position: center;
     background-position-y: top;
 }
+.bodyabout{
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
