--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@
   background-position: center;
   background-position-y: top; }
 
+.bodyabout {
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center; }
+
 header .logotipo {
   zoom: 8%;
   opacity: 90%; }
@@ -63,6 +69,45 @@ header .logotipo {
     font-family: 'Bebas Neue';
     margin: 5rem;
     color: white; }
+
+.mainabout {
+  font-size: larger;
+  width: 85vw;
+  max-width: 700px;
+  margin: auto; }
+  .mainabout .titulos {
+    list-style: none;
+    padding: 0;
+    list-style-type: none;
+    text-align: center; }
+    .mainabout .titulos a {
+      padding: 1px;
+      text-decoration: none;
+      color: maroon; }
+      .mainabout .titulos a:hover {
+        zoom: 110%; }
+  .mainabout .ordenes {
+    list-style: none;
+    padding: 0;
+    list-style-type: none;
+    text-align: center; }
+    .mainabout .ordenes a {
+      padding: 1px;
+      text-decoration: none;
+      color: maroon; }
+      .mainabout .ordenes a:hover {
+        zoom: 110%; }
+  .mainabout .contactarme {
+    list-style: none;
+    padding: 0;
+    list-style-type: none;
+    text-align: center; }
+    .mainabout .contactarme a {
+      padding: 1px;
+      text-decoration: none;
+      color: maroon; }
+      .mainabout .contactarme a:hover {
+        zoom: 110%; }
 
 footer {
   background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, #3f3d3d 78.9%); }
