--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   padding: 0;
   margin: 0; }
@@ -19,6 +20,11 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center; }
+
+.bodyinfo {
+  background-image: url("https://i.pinimg.com/originals/2a/2a/25/2a2a250c1c28611dc86a166050b60a7a.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; }
 
 header .logotipo {
   zoom: 8%;
@@ -108,6 +114,27 @@ header .logotipo {
       color: maroon; }
       .mainabout .contactarme a:hover {
         zoom: 110%; }
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: "Portada Premisa Premisa" "Portada Puntaje año_y_plataformas" ". . ."; }
+
+.Portada {
+  grid-area: Portada;
+  background-image: url("https://image.api.playstation.com/cdn/UP0102/CUSA02337_00/xw34qvOZBl5pRv6j2HCrJS8dGYdCgBIP.png"); }
+
+.Premisa {
+  grid-area: Premisa; }
+
+.Puntaje {
+  grid-area: Puntaje; }
+
+.año_y_plataformas {
+  grid-area: año_y_plataformas; }
 
 footer {
   background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, #3f3d3d 78.9%); }
