--- a/scss/secciones/_body.scss
+++ b/scss/secciones/_body.scss
@@ -16,3 +16,8 @@
     background-size: cover;
     background-position: center;
 }
+.bodyinfo{
+    background-image: url('https://i.pinimg.com/originals/2a/2a/25/2a2a250c1c28611dc86a166050b60a7a.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
