--- a/scss/secciones/_main.scss
+++ b/scss/secciones/_main.scss
@@ -1,3 +1,4 @@
+//INDEX.HTML
 .mainindex{
     h1{font-family: 'Bebas Neue';}
     h2{font-family: 'Lobster';}
@@ -45,6 +46,7 @@
         margin: 40px;
     }
 }
+//CONTACTO.HTML
 .maincontacto{
     h1{
         font-family: 'Bebas Neue';
@@ -54,6 +56,7 @@
     height: 90vh;
     text-align: center;
 }
+//ABOUT.HTML
 .mainabout{
     font-size: larger;
     width: 85vw;
@@ -96,4 +99,27 @@
             &:hover{zoom:110%};
         }
     }
+}
+//TITULO0.HTML
+.container {  display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "Portada Premisa Premisa"
+      "Portada Puntaje año_y_plataformas"
+      ". . .";
+  }
+  
+  .Portada { grid-area: Portada; }
+  
+  .Premisa { grid-area: Premisa; }
+  
+  .Puntaje { grid-area: Puntaje; }
+  
+  .año_y_plataformas { grid-area: año_y_plataformas; 
+} 
+#0{
+    background-image: url('');
 }
