--- a/scss/secciones/_body.scss
+++ b/scss/secciones/_body.scss
@@ -1,3 +1,4 @@
+//Cada body fue codeado para ponerle un fondo
 .bodyindex{
     background-image: url('https://images7.alphacoders.com/108/thumb-1920-1081776.jpg'); 
     background-repeat: no-repeat;
