--- a/scss/variables/_extend.scss
+++ b/scss/variables/_extend.scss
@@ -10,3 +10,9 @@
         &:hover{zoom:110%};
     }
 }
+%aboutStyle{
+    font-size: larger;
+    width: 85vw;
+    max-width: 700px;
+    margin: auto;
+}
