--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@
     .mainabout .ordenes a:hover, .mainabout .contactarme a:hover, .mainabout .titulos a:hover {
       zoom: 110%; }
 
+.mainabout {
+  font-size: larger;
+  width: 85vw;
+  max-width: 700px;
+  margin: auto; }
+
 .bodyindex {
   background-image: url("https://images7.alphacoders.com/108/thumb-1920-1081776.jpg");
   background-repeat: no-repeat;
@@ -83,15 +89,9 @@ header .logotipo {
   height: 90vh;
   text-align: center; }
   .maincontacto h1 {
-    font-family: 'Bebas Neue';
+    font-family: "Bebas Neue";
     margin: 5rem;
     color: white; }
-
-.mainabout {
-  font-size: larger;
-  width: 85vw;
-  max-width: 700px;
-  margin: auto; }
 
 footer {
   background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, #3f3d3d 78.9%); }
