--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 }
 
 //import de la carpeta variables:
+@import './variables/variables';
 @import './variables/extend';
 @import './variables/mixing';
 //import de la carpeta secciones:
