--- a/scss/secciones/_body.scss
+++ b/scss/secciones/_body.scss
@@ -14,4 +14,4 @@
     @include bodyProp ('https://i.pinimg.com/originals/2a/2a/25/2a2a250c1c28611dc86a166050b60a7a.jpg', cover);
     background-position: center;
 }
-.bodyorden{@include bodyProp ('https://www.hd-tecnologia.com/imagenes/articulos/2016/08/Resident-Evil-7-Gamescom.jpg', cover);}
+.bodyorden{background-color: black;}
