--- a/scss/secciones/_main.scss
+++ b/scss/secciones/_main.scss
@@ -60,7 +60,7 @@
 	font-family: 'Bebas Neue';
 	text-align: center;
 	color: white;
-	padding: 2rem;
+	padding: 5rem;
 }
 .re0{
     background-image: url('../../img/tit0.jpg') !important;
@@ -228,4 +228,166 @@ background: linear-gradient(to right, #ffc500, #c21500);
 	background: #FC354C;
 background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
 background: linear-gradient(to right, #0ABFBC, #FC354C);
+}
+
+//ORDEN.HTML
+.mainorden{
+	.tituloOrden{
+		font-family: 'Bebas Neue';
+		text-align: center;
+		color: white;
+		padding: 2rem;
+		margin: 2rem;
+	}
+	h3{
+		background-color: #b7b7b7;
+		color: black;
+		width: 40vw;
+	}
+	.parrafoOrden{
+		font-family: $font-text;
+		color: white;
+		padding: 2rem;
+		font-size: larger;
+		width: 60vw;
+		position: relative;
+		left: 20vw;
+	}
+
+	/* Base */
+	p {
+		font-weight: 300;
+		width: 40vw;
+	}
+
+	a { 
+		color: $color-dim;
+		text-decoration: none;
+		text-transform: uppercase;
+		display: block;
+		letter-spacing: .3em;
+		font-size: .6em;
+		font-weight: 400;
+		background: #252727;
+		padding: .3rem 1rem;
+		margin: 1.9rem 0 0 0;
+		float: right;
+	}
+
+	a {
+		&:hover{ 
+			color: $color-light;
+			background: $color-primary;
+			border-bottom: .35em solid black;
+		}
+	}
+
+	strong {
+		font-weight: 600;
+	}
+
+	h1 {
+		font-family: $font-title;
+		letter-spacing: 1.5px;
+		color: $color-light;  
+		font-weight: 400;
+		font-size: 2.4em;
+	}
+
+	#timeline-content {
+		margin-top: $spacing;
+		text-align: center; 
+		font-size: 16px;
+		color: $color-light; 
+	}
+
+	/* Timeline */
+
+	.timeline {
+		li{
+			background-color: black;
+			p{
+				width: 40vw;
+			}
+		}
+		background-color: black;
+		border-left: $line solid $color-primary;
+		border-bottom-right-radius: $radius;
+		border-top-right-radius: $radius;    
+		background: fade($color-light, 3%);
+		color: fade(white, 80%);
+		font-family: $font-text;  
+		margin: $spacing auto;  
+		letter-spacing: 0.5px;   
+		position: relative;
+		line-height: 1.4em;
+		font-size: 1.03em;   
+		padding: $spacing;   
+		list-style: none;
+		text-align: left;  
+		font-weight: 100;  
+		max-width: 30%; 
+	
+		h1 {
+			font-family: $font-title;
+			letter-spacing: 1.5px;
+			font-weight: 100;
+			font-size: 1.4em;    
+		}
+	
+		h2, h3 {
+			font-family: $font-title;
+			letter-spacing: 1.5px;
+			font-weight: 400;
+			font-size: 1.4em;
+		}
+	
+		.event {
+			border-bottom: 1px dashed fade($color-light, 10%);
+			padding-bottom: ($spacing * 0.5);
+			margin-bottom: $spacing;  
+			position: relative;
+
+			&:last-of-type { 
+				padding-bottom: 0;
+				margin-bottom: 0; 
+				border: none;      
+			}
+
+			&:before, &:after {
+				position: absolute;
+				display: block;
+				top: 0;
+			}
+
+			&:before {
+				left: ((($date * 0.6) + $spacing + $line + $dot + ($dotborder * 2)) * 1.5) * -1;    
+				color: fade($color-light, 40%);    
+				content: attr(data-date);
+				text-align: right;
+				font-weight: 100;    
+				font-size: 0.9em;
+				min-width: $date;
+				font-family: $font-title;
+			}
+
+			&:after {
+				box-shadow: 0 0 0 $dotborder fade($color-primary,100%);    
+				left: ($spacing + $line + ($dot * 0.35)) * -1;        
+				background: lighten($background,5%);    
+				border-radius: 50%;  
+				height: $dot;
+				width: $dot;
+				content: "";
+				top: 5px;
+			}
+		}
+	}
+	@media (max-width: 856px) {
+		.parrafoOrden{
+			width: 100vw;
+			position: relative;
+			left: 1vw;
+		}
+	}
 }
